# Database.Project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_FRONTEND.md  TECHNICAL_OVERVIEW.html  TODO  WEBSHELL_README.md  app.py  docker-compose.yml  gunicorn_conf.py  gunicorn_config.py  main.py  pyproject.toml
blueprints/: admin.py  api.py  auth.py  comment.py  group.py  index.py  project.py  terminal.py  user.py
database/: __init__.py  actions.py  models.py
docs/: overview-11-4.html
instance/: db.sqlite
mds/: AJAX_LOGIN_REQUIRED.md  CHANGELOG_UI.md  DARKMODE_FIX.md  DEPLOYMENT_GUIDE.md  EVENTLET_FIX.md  FLASH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_SUPPORT.md  MIGRATION_GROUP_APPLICATION.md  NPIPE_SOCKET_FIX.md  README_FRONTEND_COMPLETE.md  THEME_FLASH_FIX.md  WEBSHELL_IMPROVEMENTS.md  WEBSHELL_IO_FIX.md  WEBSHELL_SUMMARY.md
static/css/: style.css  terminal.css
static/js/: admin.js  app.js  group.js  project.js  terminal.js  user.js
student_project_template/: README.md  app.py
student_project_template/static/: style.css
student_project_template/templates/: about.html  index.html
templates/: base.html  index.html  project_detail.html  terminal.html
templates/admin/: dashboard.html
templates/auth/: login.html  register.html
templates/errors/: 404.html  500.html
templates/group/: change_leader.html  create.html  detail.html  edit.html  list.html  profile.html
templates/project/: create.html  detail.html  edit.html  list.html  project_detail.html  (+1 more)
utils/: docker_client.py  image_upload.py  redis_client.py
(+3 files in other folders)
