[project]
name = "db-sys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "eventlet>=0.40.3",
    "flask>=3.1.2",
    "flask-email>=1.4.4",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "markdown>=3.9",
    "pymysql>=1.1.2",
    "python-socketio>=5.14.3",
    "redis>=7.0.1",
]
